# shindex-3d-web

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json  webpack.config.js
src/: gl.rs  lib.rs
src/samples/: mod.rs  rectangle.rs  rectangle_index_buffer.rs  triangles.rs  triangles_bak.rs  utility.rs
src/shaders/: mod.rs
src/shaders/fragment/: mod.rs  simple.rs
src/shaders/sample/: mod.rs
src/shaders/vertex/: simple.rs
web/: index.html  index.ts  main.scss
