[package]
name = "shindex-3d-web"
version = "0.1.0"
authors = ["Tobias Schindler <tobias_schindler@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.59"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.36"

[dependencies.web-sys]
version = "0.3.4"
features = [
	'Window',
	'Document',
	'Element',
	'HtmlCanvasElement',
	'WebGlRenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlBuffer',
    'WebGlUniformLocation'
]
